--- a/LuggageTrackerTool2/src/view/RegistrationLuggage.form
+++ b/LuggageTrackerTool2/src/view/RegistrationLuggage.form
@@ -7,6 +7,15 @@
         <TitledBorder title="Register Luggage"/>
       </Border>
     </Property>
+    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[350, 201]"/>
+    </Property>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[350, 201]"/>
+    </Property>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[350, 201]"/>
+    </Property>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -23,13 +32,92 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="388" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
+                          <Component id="DESCRIPTION" min="-2" max="-2" attributes="0"/>
+                          <Component id="LUGGAGE_ID" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="LUGGAGE_ID_INPUT" max="32767" attributes="0"/>
+                          <Component id="DESCRIPTION_INPUT" pref="309" max="32767" attributes="0"/>
+                          <Component id="STORAGE_LOCATION_INPUT" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace pref="27" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="275" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="LUGGAGE_ID" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LUGGAGE_ID_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="DESCRIPTION_INPUT" min="-2" pref="61" max="-2" attributes="0"/>
+                  <Component id="DESCRIPTION" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="19" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
+                  <Component id="STORAGE_LOCATION_INPUT" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JLabel" name="LUGGAGE_ID">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Luggage ID"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="LUGGAGE_ID_INPUT">
+    </Component>
+    <Component class="javax.swing.JLabel" name="DESCRIPTION">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Description"/>
+      </Properties>
+    </Component>
+    <Container class="javax.swing.JScrollPane" name="DESCRIPTION_INPUT">
+      <AuxValues>
+        <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+      </AuxValues>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JTextArea" name="jTextArea1">
+          <Properties>
+            <Property name="columns" type="int" value="20"/>
+            <Property name="rows" type="int" value="5"/>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
+    <Component class="javax.swing.JLabel" name="STORAGE_LOCATION">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Storage Location"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="STORAGE_LOCATION_INPUT">
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="PRINT_ON_REGISTER_INPUT">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Print on register."/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
