--- a/LuggageTrackerTool2/src/view/AccountManagement.form
+++ b/LuggageTrackerTool2/src/view/AccountManagement.form
@@ -16,19 +16,19 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="422" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   <Component id="ACCOUNT_MANAGEMENT" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="1" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="301" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="322" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -45,18 +45,25 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="NEW_USER" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="NEW_USERNAME" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="NEW_PASSWORD" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="CHANGE_PASSWORD_TEXT" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="CHANGE_USERNAME_TEXT" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="CHANGE_PASSWORD_TEXT" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                      <Component id="NEW_USERNAME" min="-2" max="-2" attributes="0"/>
+                                      <Component id="NEW_PASSWORD" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="CHANGE_USERNAME_TEXT" alignment="1" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="NEW_CONFIRM" min="-2" max="-2" attributes="0"/>
+                              <Component id="CHANGE_CONFIRM" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="NEW_USERNAME_INPUT" alignment="0" pref="100" max="32767" attributes="0"/>
                               <Component id="NEW_PASSWORD_INPUT" alignment="0" pref="100" max="32767" attributes="0"/>
@@ -66,14 +73,7 @@
                       </Group>
                       <Component id="CHANGE_PASSWORD" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="219" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="NEW_CONFIRM" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="CHANGE_CONFIRM" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace pref="185" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -92,9 +92,9 @@
                       <Component id="NEW_PASSWORD" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="NEW_PASSWORD_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="NEW_CONFIRM" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="CHANGE_PASSWORD" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -106,9 +106,9 @@
                       <Component id="CHANGE_PASSWORD_TEXT" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="CHANGE_PASSWORD_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="CHANGE_CONFIRM" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="94" max="32767" attributes="0"/>
+                  <EmptySpace pref="71" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
