--- a/LuggageTrackerTool2/src/view/LTTLogin.form
+++ b/LuggageTrackerTool2/src/view/LTTLogin.form
@@ -45,9 +45,9 @@
                                   <Component id="USERNAME_LABEL" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="USERNAME_INPUT" alignment="1" min="-2" pref="126" max="-2" attributes="0"/>
-                                  <Component id="PASSWORD_INPUT" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="PASSWORD_INPUT" max="32767" attributes="0"/>
+                                  <Component id="USERNAME_INPUT" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
